Trying to fix ios issues

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script src="https://maps.googleapis.com/maps/api/js"></script>
   </head>
   <body>
+    <div id="bg">
+      <img src='../static/images/BW Mountain.png' alt="">
+    </div>
     <div class="initial-container"></div>
   </body>
   <script src="/bundle.js"></script>
