--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="bg">
-      <img src='../static/images/BW Mountain.png' alt="">
+      <img src='../static/images/BW Mountain_smallerer.png' alt="">
     </div>
     <div class="initial-container"></div>
   </body>
