--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="bg">
-      <img src='../static/images/BW Mountain_smallerer.png' alt="">
+      <img src='../static/images/BW Mountain_50_percent.png' alt="">
     </div>
     <div class="initial-container"></div>
   </body>
