--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Allan|Raleway|Lobster+Two" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/style/style.css">
@@ -15,7 +14,7 @@
   </head>
   <body>
     <div id="bg">
-      <img src='../static/images/BW Mountain_50_percent.png' alt="">
+      <img src='../static/images/BW Mountain_smallerer.png' alt="">
     </div>
     <div class="initial-container"></div>
   </body>
